--- a/JavaScript/todolist/index.html
+++ b/JavaScript/todolist/index.html
@@ -52,12 +52,7 @@
     <span onclick="newElement()" id="liveToastBtn" class="button">Ekle</span>
   </div>
 
-  <ul id="list">
-    <li>3 Litre Su İç</li>
-    <li>Ödevleri Yap</li>
-    <li>En Az 3 Saat Kodlama Yap</li>
-    <li>Yemek Yap</li>
-    <li>50 Sayfa Kitap Oku</li>
+  <ul id="list" class="list-group">
   </ul>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
