Dinamik kategori butonları eklendi.

--- a/JavaScript/asiankitchen/index.html
+++ b/JavaScript/asiankitchen/index.html
@@ -22,6 +22,11 @@
         <section class="menu">
             <!--title-->
             <h2>Asian Kitchen's Menu</h2>
+
+            <!--category buttons-->
+            <div id="btnContainer">
+                <!-- <button class="btn btn-outline-dark">All</button> -->
+            </div>
         </section>
     </div>
 
