kart elemanları oluşturuldu.

--- a/JavaScript/asiankitchen/index.html
+++ b/JavaScript/asiankitchen/index.html
@@ -19,13 +19,39 @@
 <body>
 
     <div class="container mt-3">
-        <section class="menu">
-            <!--title-->
-            <h2>Asian Kitchen's Menu</h2>
 
-            <!--category buttons-->
-            <div id="btnContainer">
-                <!-- <button class="btn btn-outline-dark">All</button> -->
+        <!--title-->
+        <h2>Asian Kitchen's Menu</h2>
+
+        <!--category buttons-->
+        <div id="btnContainer">
+            <!-- <button class="btn btn-outline-dark">All</button> -->
+        </div>
+        
+        <section class="menu">
+            <div id="cardContainer" class="row row-cols-1 row-cols-lg-2">
+
+                <!-------------------- card item---------- -->
+                <!-- <div class="col">
+                  <div class="card mb-3">
+                    <div class="row no-gutters">
+                      <div class="col-md-5">
+                        <img src="http://placehold.jp/200x200.png" alt="...">
+                      </div>
+                      <div class="col-md-7">
+                        <div class="card-body">
+                          <h5 class="card-title d-inline">Card title</h5>
+                          <span class="price">11.50</span>
+                          <hr>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional
+                            content. This content is a little bit longer.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div> -->
+
             </div>
         </section>
     </div>
