--- a/Bootstrap/instagramclone/index.html
+++ b/Bootstrap/instagramclone/index.html
@@ -23,12 +23,14 @@
         <span class="navbar-toggler-icon mr-5"></span>
       </button>
     </div>
-    <div class="collapse navbar-collapse">
+    <!------Search satart-->
+    <div class="collapse navbar-collapse d-flex justify-content-center ml-5">
       <form class="form-inline my-2 my-lg-0 ml-5 d-none d-sm-block">
         <input class="form-control mr-sm-2 empty" type="search" placeholder="Ara"
           style="font-family: Arial, FontAwesome; height: 28px; width: 216px" aria-label="Search" />
       </form>
     </div>
+    <!------Search satart-->
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav">
         <li class="nav-item active">
