Menü kısmına sayfa sm boyutunda olunca kaybolacak şekilde display verildi.

--- a/Bootstrap/instagramclone/index.html
+++ b/Bootstrap/instagramclone/index.html
@@ -30,9 +30,11 @@
           style="font-family: Arial, FontAwesome; height: 28px; width: 216px" aria-label="Search" />
       </form>
     </div>
-    <!------Search satart-->
+    <!------Search End-->
+
+    <!------Menu Start------>
     <div class="collapse navbar-collapse">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ml-5 mt-2 d-none d-md-flex">
         <li class="nav-item active">
           <a class="nav-link" href="#"><i class="fas fa-home fa-lg mr-2 d-none d-sm-block mt-1"></i>
             <span class="sr-only">(current)</span></a>
@@ -54,8 +56,10 @@
         </li>
       </ul>
     </div>
+    <!------Menu End------>
+
   </nav>
-  <!----- Navbar Start ----------->
+  <!----- Navbar End ----------->
 
   <div class="container middlearea">
     <div class="row">
