--- a/Bootstrap/instagramclone/index.html
+++ b/Bootstrap/instagramclone/index.html
@@ -61,9 +61,11 @@
   </nav>
   <!----- Navbar End ----------->
 
+  <!-------- Content Start------>
   <div class="container middlearea">
     <div class="row">
-      <div class="col-6">
+      <!-----Left Side Start-->
+      <div class="col-6 mt-2 offset-sm-1">
         <div class="card">
           <div class="card-body">
             <a href="https://www.instagram.com/kodluyoruz" style="text-decoration: none;" target="_blank">
@@ -367,6 +369,7 @@
           </div>
         </div>
       </div>
+      <!-----Left Side End-->
       <div class="col-3">
         <div class="card col-xs-12 rightpanel" id="sticky-sidebar" style="width: 18rem">
           <div class="card-body d-flex">
@@ -479,6 +482,7 @@
       </div>
     </div>
   </div>
+  <!-------- Content End------>
 </body>
 
 </html>
