--- a/Bootstrap/instagramclone/index.html
+++ b/Bootstrap/instagramclone/index.html
@@ -159,7 +159,7 @@
                       margin-left: -11px;
                     "></i></a>
             </li>
-            <span class="">
+            <span class="offset-7">
               <li class="nav-item ml-4">
                 <a class="nav-link ml-2" href="#"><i class="far fa-bookmark fa-lg"
                     style="color: black; position: relative; font-size: 23px"></i></a>
@@ -246,7 +246,7 @@
                       margin-left: -11px;
                     "></i></a>
             </li>
-            <span class="">
+            <span class="offset-7">
               <li class="nav-item ml-4">
                 <a class="nav-link ml-2" href="#"><i class="far fa-bookmark fa-lg"
                     style="color: black; position: relative; font-size: 23px"></i></a>
@@ -333,7 +333,7 @@
                       margin-left: -11px;
                     "></i></a>
             </li>
-            <span class="">
+            <span class="offset-7">
               <li class="nav-item ml-4">
                 <a class="nav-link ml-2" href="#"><i class="far fa-bookmark fa-lg"
                     style="color: black; position: relative; font-size: 23px"></i></a>
