--- a/Bootstrap/instagramclone/index.html
+++ b/Bootstrap/instagramclone/index.html
@@ -128,6 +128,9 @@
           </div>
         </div>
         <!---- Stories Card End-->
+
+        <!-------Cards------>
+        <!-- card 1 start-->
         <div class="card">
           <div class="card-header bg-light">
             <img
@@ -204,18 +207,19 @@
               10 SAAT ÖNCE
             </p>
           </div>
-          <div class="card-footer bg-light" style="
+          <div class="card-footer d-flex bg-light" style="
                 color: rgb(139, 133, 133);
                 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
                   Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
                   'Helvetica Neue', sans-serif;
                 font-size: 14px;
               ">
-            <span style="margin-left: -4px">Yorum Ekle...</span><span class=""
+            <span style="margin-left: -4px">Yorum Ekle...</span><span class="ml-auto"
               style="color: #0095f6; opacity: 50%"><strong>Paylaş</strong></span>
           </div>
         </div>
-        <!-------- Card Satart --------->
+        <!-- card 1 end-->
+        <!-- card 2 start-->
         <div class="card">
           <div class="card-header bg-light">
             <img
@@ -290,18 +294,19 @@
               10 SAAT ÖNCE
             </p>
           </div>
-          <div class="card-footer bg-light" style="
+          <div class="card-footer d-flex bg-light" style="
                 color: rgb(139, 133, 133);
                 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
                   Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
                   'Helvetica Neue', sans-serif;
                 font-size: 14px;
               ">
-            <span style="margin-left: -4px">Yorum Ekle...</span><span class=""
+            <span style="margin-left: -4px">Yorum Ekle...</span><span class="ml-auto"
               style="color: #0095f6; opacity: 50%"><strong>Paylaş</strong></span>
           </div>
         </div>
-        <!-------- Card End --------->
+        <!-- card 2 end-->
+        <!-- card 3 start-->
         <div class="card mb-3">
           <div class="card-header bg-light">
             <img
@@ -375,17 +380,18 @@
               10 SAAT ÖNCE
             </p>
           </div>
-          <div class="card-footer bg-light" style="
+          <div class="card-footer d-flex bg-light" style="
                 color: rgb(139, 133, 133);
                 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
                   Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
                   'Helvetica Neue', sans-serif;
                 font-size: 14px;
               ">
-            <span style="margin-left: -4px">Yorum Ekle...</span><span class=""
+            <span style="margin-left: -4px">Yorum Ekle...</span><span class="ml-auto"
               style="color: #0095f6; opacity: 50%"><strong>Paylaş</strong></span>
           </div>
         </div>
+        <!-- card 3 end-->
       </div>
       <!-----Left Side End-->
       <div class="col-3">
