Nvbar ve Sidebar kısımlarını position sticky özelliği kazandırıldı.

--- a/Bootstrap/instagramclone/index.html
+++ b/Bootstrap/instagramclone/index.html
@@ -8,13 +8,13 @@
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
     integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/instagramclone/css/style.css" />
+  <link rel="stylesheet" href="css/style.css" />
   <title>Instagram</title>
 </head>
 
-<body>
+<body class="mt-5">
   <!----- Navbar Start ----------->
-  <nav class="navbar navbar-expand-sm sticky-top navbar-light bg-light border">
+  <nav class="navbar navbar-expand-sm fixed-top navbar-light bg-light border">
     <div class="logo">
       <a class="navbar-brand" href="#"><img
           src="https://www.instagram.com/static/images/web/mobile_nav_type_logo.png/735145cfe0a4.png" /></a>
@@ -395,7 +395,7 @@
       </div>
       <!-----Left Side End-->
       <div class="col-3">
-        <div class="card col-xs-12 rightpanel" id="sticky-sidebar" style="width: 18rem">
+        <div class="card col-xs-12 rightpanel border-0 " id="sticky-sidebar" style="width: 20rem">
           <div class="card-body d-flex">
             <div>
               <a class="nav-link" href="#">
