tümünü gör ve Takip et yazıları sağa alındı, body arka plan rengi değiştirildi.

--- a/Bootstrap/instagramclone/index.html
+++ b/Bootstrap/instagramclone/index.html
@@ -67,7 +67,7 @@
       <!-----Left Side Start-->
       <div class="col-12 col-sm-6 mt-2 offset-sm-1">
         <!---- Stories Card Start-->
-        <div class="card">
+        <div class="card mb-4">
           <div class="card-body ">
             <div class="story-item d-inline-flex">
               <a href="https://www.instagram.com/kodluyoruz" style="text-decoration: none;" target="_blank">
@@ -131,7 +131,7 @@
 
         <!-------Cards------>
         <!-- card 1 start-->
-        <div class="card">
+        <div class="card mb-4">
           <div class="card-header bg-light">
             <img
               src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/83792429_185184289374945_1047727451901263872_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=oor-Z1FIzvgAX-uXuhs&tp=1&oh=e92baf321c3e2e5ebf9416204da05c82&oe=602E0320"
@@ -220,7 +220,7 @@
         </div>
         <!-- card 1 end-->
         <!-- card 2 start-->
-        <div class="card">
+        <div class="card mb-4">
           <div class="card-header bg-light">
             <img
               src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/105971749_581051382486071_1053777149100084988_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=VMAJoeqh5IwAX_QH3Nt&tp=1&oh=3bd9dbd2532c87e350dfcfffec74f120&oe=602BAC27"
@@ -426,7 +426,7 @@
                       font-size: 15px;
                       color: gray;
                     ">Senin İçin Öneriler</span>
-                <span class="postuserfont mt-1" style="font-size: 12px"><strong>Tümünü Gör</strong></span>
+                <span class="postuserfont mt-1" style="font-size: 12px"><strong class="float-right">Tümünü Gör</strong></span>
               </div>
               <div class="mt-2 ml-2">
                 <div>
@@ -436,7 +436,7 @@
                   </span>
                   <a href="https://www.instagram.com/kablosuzbeyin" target="_blank">
                     <span class="postuserfont ml-2 mt-1"><strong>kablosuzbeyin</strong></span>
-                    <span class="postuserfont" style="font-size: 13px; color: #0095f6; margin-top: 5px"><strong>Takip
+                    <span class="postuserfont" style="font-size: 13px; color: #0095f6; margin-top: 5px"><strong class="float-right">Takip
                         Et</strong></span>
                   </a>
                 </div>
@@ -447,7 +447,7 @@
                   </span>
                   <a href="https://www.instagram.com/codecraftcom" target="_blank">
                     <span class="postuserfont ml-2 mt-1"><strong>codecraftcom </strong></span>
-                    <span class="postuserfont" style="font-size: 13px; color: #0095f6; margin-top: 5px"><strong>Takip
+                    <span class="postuserfont" style="font-size: 13px; color: #0095f6; margin-top: 5px"><strong class="float-right">Takip
                         Et</strong></span>
                   </a>
                 </div>
@@ -458,7 +458,7 @@
                   </span>
                   <a href="https://www.instagram.com/navlungotr" target="_blank">
                     <span class="postuserfont ml-2 mt-1"><strong>navlungotr</strong></span>
-                    <span class="postuserfont" style="font-size: 13px; color: #0095f6; margin-top: 5px"><strong>Takip
+                    <span class="postuserfont" style="font-size: 13px; color: #0095f6; margin-top: 5px"><strong class="float-right">Takip
                         Et</strong></span>
                   </a>
                 </div>
@@ -469,7 +469,7 @@
                   </span>
                   <a href="https://www.instagram.com/podfreshco" target="_blank">
                     <span class="postuserfont ml-2 mt-1"><strong>podfreshco</strong></span>
-                    <span class="postuserfont" style="font-size: 13px; color: #0095f6; margin-top: 5px"><strong>Takip
+                    <span class="postuserfont" style="font-size: 13px; color: #0095f6; margin-top: 5px"><strong class="float-right">Takip
                         Et</strong></span>
                 </div>
                 <div class="mt-3">
@@ -479,7 +479,7 @@
                   </span>
                   <a href="https://www.instagram.com/kodluyoruz_junior" target="_blank">
                     <span class="postuserfont ml-2 mt-1"><strong>Kodluyoruz Junior</strong></span>
-                    <span class="postuserfont" style="font-size: 13px; color: #0095f6; margin-top: 5px"><strong>Takip
+                    <span class="postuserfont" style="font-size: 13px; color: #0095f6; margin-top: 5px"><strong class="float-right">Takip
                         Et</strong></span>
                   </a>
                 </div>
