--- a/Bootstrap/bootstraplinkedinclone/index.html
+++ b/Bootstrap/bootstraplinkedinclone/index.html
@@ -90,7 +90,7 @@
     <div style="padding-top: 4.5rem;">
       <div class="row">
         <!-- sol panel -->
-        <div class="">
+        <div class="col-3">
           <!-- sol panel -->
           <div class="card" style="width: 14rem">
             <div class="card-header" style="
@@ -207,7 +207,7 @@
         </div>
 
         <!-- orta panel -->
-        <div class="col-3" style="">
+        <div class="col-6">
           <div class="card">
             <div class="card-body">
               <input type="text" class="form-control content" placeholder="Bir gönderi başlat" />
@@ -403,8 +403,8 @@
         </div>
 
         <!-- sağ panel -->
-        <div class="">
-          <div class="card" style="width: 19rem">
+        <div class="col-3">
+          <div class="card" >
             <div class="card-header bg-white border-0">
               <span>Akışınıza ekleyin</span><span><i class="fas fa-info-circle float-right"></i></span>
             </div>
