--- a/Bootstrap/bootstraplinkedinclone/index.html
+++ b/Bootstrap/bootstraplinkedinclone/index.html
@@ -94,26 +94,25 @@
           <!-- sol panel -->
           <div class="card" style="width: 14rem">
             <div class="card-header" style="
-                  background-image: url(https://thumbor.forbes.com/thumbor/fit-in/1200x0/filters%3Aformat%28jpg%29/https%3A%2F%2Fblogs-images.forbes.com%2Falejandrocremades%2Ffiles%2F2018%2F12%2Fbusiness-3605367_1920-1200x741.jpg);
+                  background-image:url(https://media-exp1.licdn.com/dms/image/C4E16AQEYqK2LgXxcZg/profile-displaybackgroundimage-shrink_200_800/0/1644589483200?e=1651708800&v=beta&t=dpQYdpUpBYhK4hVBPJo4xessmqYXkp4mTyYDXEwT7Ao);
                   height: 53px;
                 ">
               <img
-                src="https://media-exp1.licdn.com/dms/image/C4D03AQFpMjVJ_N2wRQ/profile-displayphoto-shrink_100_100/0/1582787654653?e=1616630400&v=beta&t=C1X2NxhcN0R0GmELl1Ew7BeOoyGbwJXCw8c7lHm6XuA"
-                class="" style="
+                src="https://media-exp1.licdn.com/dms/image/C4E03AQGP6BT5LDeEXg/profile-displayphoto-shrink_100_100/0/1644589418049?e=1651708800&v=beta&t=Yi7VwG2TOvMvpUGASLdf1gx-CgbI-nBZckbd17udsFA"
+                class="rounded-circle" style="
                     width: 70px;
                     height: 70px;
                   " />
             </div>
-            <div class="card-body">
-              <p class="card-title header">
-                <a href="https://www.linkedin.com/in/cengizcmataraci/" target="_blank" style="color: #212529;">Cengiz
-                  Cemal Mataracı</a>
+            <div class="card-body"  style="padding: 10px;">
+              <p class="card-title header mt-4">
+                <a href="https://www.linkedin.com/in/halil-kurt/" target="_blank" style="color: #212529;">Halil Kurt</a>
               </p>
               <div style="
                     margin-bottom: 10px;
                     color: #5f5f5f;
                   ">
-                Software Developer at Navlungo - Dijital Lojistik Platformu
+                Front-End Developer
               </div>
               <hr />
               <div class="card-text">
@@ -128,7 +127,7 @@
               </div>
             </div>
             <div class="card-footer ">
-              <i class="fas fa-bookmark"></i><span class="mb-4">Ögelerim</span>
+              <i class="fas fa-bookmark"></i><span class="mb-4 ml-2">Ögelerim</span>
             </div>
           </div>
           <div class="card mt-2" style="width: 14rem">
@@ -404,7 +403,7 @@
 
         <!-- sağ panel -->
         <div class="col-3">
-          <div class="card" >
+          <div class="card">
             <div class="card-header bg-white border-0">
               <span>Akışınıza ekleyin</span><span><i class="fas fa-info-circle float-right"></i></span>
             </div>
