--- a/Bootstrap/bootstraplinkedinclone/index.html
+++ b/Bootstrap/bootstraplinkedinclone/index.html
@@ -90,10 +90,10 @@
     <div style="padding-top: 4.5rem;">
       <div class="row">
         <!-- sol panel -->
-        <div class="col-3">
+        <div class="col-2">
           <!-- sol panel -->
           <div class="card" style="width: 14rem">
-            <div class="card-header" style="
+            <div class="card-header text-center" style="
                   background-image:url(https://media-exp1.licdn.com/dms/image/C4E16AQEYqK2LgXxcZg/profile-displaybackgroundimage-shrink_200_800/0/1644589483200?e=1651708800&v=beta&t=dpQYdpUpBYhK4hVBPJo4xessmqYXkp4mTyYDXEwT7Ao);
                   height: 53px;
                 ">
@@ -105,10 +105,10 @@
                   " />
             </div>
             <div class="card-body"  style="padding: 10px;">
-              <p class="card-title header mt-4">
+              <p class="card-title header mt-4 text-center">
                 <a href="https://www.linkedin.com/in/halil-kurt/" target="_blank" style="color: #212529;">Halil Kurt</a>
               </p>
-              <div style="
+              <div class="text-center" style="
                     margin-bottom: 10px;
                     color: #5f5f5f;
                   ">
@@ -134,7 +134,7 @@
             <div class="card-header" style="margin-bottom: -22px; font-size: 18px">
               Sayfalarım
             </div>
-            <div class="card-body">
+            <div class="card-body mt-2">
               <div class="card-title">
                 <img
                   src="https://media-exp1.licdn.com/dms/image/C4E0BAQGl9HYLHdcl6g/company-logo_100_100/0/1610108537301?e=1619654400&v=beta&t=MxTTjGSiH6Xvx2x9YMbjgLWIaU5uojZNqXGGuUIWUQo"
@@ -154,12 +154,12 @@
                       margin-left: 38px;
                     ">
                   Sayfa Bildirimleri
-                  <span class="" style="color: #0a66c2">10</span>
+                  <span class="float-right" style="color: #0a66c2">10</span>
                 </div>
               </div>
             </div>
           </div>
-          <div class="card mt-2" style="width: 14rem;">
+          <div class="card mt-2 sticky" style="width: 14rem;">
             <div class="card-header bg-white border-0" style="font-size: 12px">
               En Yeni
             </div>
@@ -206,7 +206,7 @@
         </div>
 
         <!-- orta panel -->
-        <div class="col-6">
+        <div class="col-5 ml-auto">
           <div class="card">
             <div class="card-body">
               <input type="text" class="form-control content" placeholder="Bir gönderi başlat" />
@@ -402,7 +402,7 @@
         </div>
 
         <!-- sağ panel -->
-        <div class="col-3">
+        <div class="col-4">
           <div class="card">
             <div class="card-header bg-white border-0">
               <span>Akışınıza ekleyin</span><span><i class="fas fa-info-circle float-right"></i></span>
