--- a/Bootstrap/bootstraplinkedinclone/index.html
+++ b/Bootstrap/bootstraplinkedinclone/index.html
@@ -240,7 +240,7 @@
                     <path d="M21 3v2H3V3zm-6 6h6V7h-6zm0 4h6v-2h-6zm0 4h6v-2h-6zM3 21h18v-2H3zM13 7H3v10h10z"></path>
                   </svg><span class="ml-1 mediatext">Yazı yaz</span>
                 </button></span>
-              <!--Share buttons Start-->
+              <!--Share buttons end-->
             </div>
           </div>
           <div>
@@ -272,25 +272,25 @@
               <div>
                 <img src="https://pbs.twimg.com/media/Em2_xBbXUAEVDx1.jpg" class="card-img-top mb-1" alt="..." />
               </div>
-              <span class=""><img src="https://static-exp1.licdn.com/sc/h/d310t2g24pvdy4pt1jkedo4yb" alt=""></span>
+              <span class="ml-3"><img src="https://static-exp1.licdn.com/sc/h/d310t2g24pvdy4pt1jkedo4yb" alt=""></span>
               <span class=""><img src="https://static-exp1.licdn.com/sc/h/5thsbmikm6a8uov24ygwd914f" alt=""></span>
               <span class=""
                 style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 13px; color: #474747;"><img
                   src="https://static-exp1.licdn.com/sc/h/7fx9nkd7mx8avdpqm5hqcbi97" alt=""> 958</span>
               <div class="card-footer bg-white mt-1">
-                <span><button class="ref">
+                <span><button class="ref border-0 p-1 btn-outline-secondary">
                     <i class="far fa-thumbs-up fa-md" style="font-size: 1.2rem"><span
                         class="ml-2 mediatext">Beğen</span></i>
                   </button></span>
-                <span><button class="ref">
+                <span><button class="ref border-0 p-1 btn-outline-secondary">
                     <i class="far fa-comment fa-md" style="font-size: 1.2rem"><span class="ml-2 mediatext">Yorum
                         Yap</span></i>
                   </button></span>
-                <span><button class="ref">
+                <span><button class="ref border-0 p-1 btn-outline-secondary">
                     <i class="fas fa-share fa-md" style="font-size: 1.2rem"><span
                         class="ml-2 mediatext">Paylaş</span></i>
                   </button></span>
-                <span><button class="ref">
+                <span><button class="ref border-0 p-1 btn-outline-secondary">
                     <i class="fas fa-paper-plane fa-md" style="font-size: 1.2rem"><span
                         class="ml-2 mediatext">Gönder</span></i>
                   </button></span>
@@ -324,25 +324,25 @@
                 <img src="https://miro.medium.com/max/1080/1*gdDWFSvHDt57DS2zsh_0Bg.png" class="card-img-top mb-1"
                   alt="..." />
               </div>
-              <span class=""><img src="https://static-exp1.licdn.com/sc/h/d310t2g24pvdy4pt1jkedo4yb" alt=""></span>
+              <span class="ml-3"><img src="https://static-exp1.licdn.com/sc/h/d310t2g24pvdy4pt1jkedo4yb" alt=""></span>
               <span class=""><img src="https://static-exp1.licdn.com/sc/h/5thsbmikm6a8uov24ygwd914f" alt=""></span>
               <span class=""
                 style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 13px; color: #474747;"><img
                   src="https://static-exp1.licdn.com/sc/h/7fx9nkd7mx8avdpqm5hqcbi97" alt=""> 210</span>
               <div class="card-footer bg-white mt-1">
-                <span><button class="ref">
+                <span><button class="ref border-0 p-1 btn-outline-secondary">
                     <i class="far fa-thumbs-up fa-md" style="font-size: 1.2rem"><span
                         class="ml-2 mediatext">Beğen</span></i>
                   </button></span>
-                <span><button class="ref">
+                <span><button class="ref border-0 p-1 btn-outline-secondary">
                     <i class="far fa-comment fa-md" style="font-size: 1.2rem"><span class="ml-2 mediatext">Yorum
                         Yap</span></i>
                   </button></span>
-                <span><button class="ref">
+                <span><button class="ref border-0 p-1 btn-outline-secondary">
                     <i class="fas fa-share fa-md" style="font-size: 1.2rem"><span
                         class="ml-2 mediatext">Paylaş</span></i>
                   </button></span>
-                <span><button class="ref">
+                <span><button class="ref border-0 p-1 btn-outline-secondary">
                     <i class="fas fa-paper-plane fa-md" style="font-size: 1.2rem"><span
                         class="ml-2 mediatext">Gönder</span></i>
                   </button></span>
@@ -377,25 +377,25 @@
                   src="https://media-exp1.licdn.com/dms/image/C4D22AQEm8KJthEJcwA/feedshare-shrink_800/0/1608202571866?e=1615420800&v=beta&t=YvPxACnfgaojpTgKIaeOd_apcdEzTVS82cM-kJYKv4U"
                   class="card-img-top mb-1" alt="..." />
               </div>
-              <span class=""><img src="https://static-exp1.licdn.com/sc/h/d310t2g24pvdy4pt1jkedo4yb" alt=""></span>
+              <span class="ml-3"><img src="https://static-exp1.licdn.com/sc/h/d310t2g24pvdy4pt1jkedo4yb" alt=""></span>
               <span class=""><img src="https://static-exp1.licdn.com/sc/h/5thsbmikm6a8uov24ygwd914f" alt=""></span>
               <span class=""
                 style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 13px; color: #474747;"><img
                   src="https://static-exp1.licdn.com/sc/h/7fx9nkd7mx8avdpqm5hqcbi97" alt=""> 224</span>
               <div class="card-footer bg-white mt-1">
-                <span><button class="ref">
+                <span><button class="ref border-0 p-1 btn-outline-secondary">
                     <i class="far fa-thumbs-up fa-md" style="font-size: 1.2rem"><span
                         class="ml-2 mediatext">Beğen</span></i>
                   </button></span>
-                <span><button class="ref">
+                <span><button class="ref border-0 p-1 btn-outline-secondary">
                     <i class="far fa-comment fa-md" style="font-size: 1.2rem"><span class="ml-2 mediatext">Yorum
                         Yap</span></i>
                   </button></span>
-                <span><button class="ref">
+                <span><button class="ref border-0 p-1 btn-outline-secondary">
                     <i class="fas fa-share fa-md" style="font-size: 1.2rem"><span
                         class="ml-2 mediatext">Paylaş</span></i>
                   </button></span>
-                <span><button class="ref">
+                <span><button class="ref border-0 p-1 btn-outline-secondary">
                     <i class="fas fa-paper-plane fa-md" style="font-size: 1.2rem"><span
                         class="ml-2 mediatext">Gönder</span></i>
                   </button></span>
