--- a/Bootstrap/bootstraplinkedinclone/index.html
+++ b/Bootstrap/bootstraplinkedinclone/index.html
@@ -416,7 +416,7 @@
                   src="https://media-exp1.licdn.com/dms/image/C4E0BAQFJFhz89Jkl1w/company-logo_200_200/0/1609603335789?e=1619654400&v=beta&t=m6mVHf05Zfd34UW8SBsvRz939Z_lxYUY3GilK-_MrCw"
                   style="width: 50px; height: 50px; border-radius: 50%" />
                 <span class="header ml-1" style="font-size: 14px">Codecraft</span>
-                <span class="float-right mr-3 mt-2"><button class="" style="border-radius: 50px">
+                <span class="float-right mr-3 mt-2"><button class="btn btn-outline-primary" style="border-radius: 50px">
                     <strong>+ Takip Et</strong>
                   </button></span>
               </div>
@@ -427,7 +427,7 @@
                   src="https://media-exp1.licdn.com/dms/image/C4D0BAQF7ydVqrVTvqg/company-logo_200_200/0/1587802313117?e=1619654400&v=beta&t=2kFooBBTUCTVngrEWmktX1z6nI8EgX8nRdQNH8-vxww"
                   style="width: 50px; height: 50px; border-radius: 50%" />
                 <span class="header ml-1" style="font-size: 14px">Podfresh</span>
-                <span class="float-right mr-3 mt-2"><button class="" style="border-radius: 50px">
+                <span class="float-right mr-3 mt-2"><button class="btn btn-outline-primary" style="border-radius: 50px">
                     <strong>+ Takip Et</strong>
                   </button></span>
               </div>
@@ -438,7 +438,7 @@
                   src="https://media-exp1.licdn.com/dms/image/C4D0BAQH1zDgdaC7alQ/company-logo_200_200/0/1578773895199?e=1619654400&v=beta&t=ke3I_LL-q5odDNzcfpiAsWTIjnqUk2BCVNQCI88BQqk"
                   style="width: 50px; height: 50px; border-radius: 50%" />
                 <span class="header ml-1" style="font-size: 14px">Navlungo</span>
-                <span class="float-right mr-3 mt-2"><button class="" style="border-radius: 50px">
+                <span class="float-right mr-3 mt-2"><button class="btn btn-outline-primary" style="border-radius: 50px">
                     <strong>+ Takip Et</strong>
                   </button></span>
               </div>
