--- a/Bootstrap/bootstraplinkedinclone/index.html
+++ b/Bootstrap/bootstraplinkedinclone/index.html
@@ -490,20 +490,20 @@
             </div>
           </div>
           <div class="text-center mt-3 ml-3" style="">
-            <div><a href="https://about.linkedin.com/" class="link mr-3">Hakkında</a></div>
-            <div><a
+            <div class="d-inline-block"><a href="https://about.linkedin.com/" class="link mr-3">Hakkında</a></div>
+            <div class="d-inline-block"><a
                 href="https://www.linkedin.com/accessibility?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BT6H7rzDzR%2FSQEvO%2BuBKdSw%3D%3D&licu=urn%3Ali%3Acontrol%3Ad_flagship3_feed-compactfooter.accessibility"
                 class="link mr-3">Erişilebilirlik</a></div>
-            <div><a
+            <div class="d-inline-block"><a
                 href="https://www.linkedin.com/help/linkedin?trk=footer_d_flagship3_feed&lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BT6H7rzDzR%2FSQEvO%2BuBKdSw%3D%3D&licu=urn%3Ali%3Acontrol%3Ad_flagship3_feed-compactfooter.help"
-                class="link">Yardım Merkezi</a></div>
-            <div><a href="" class="link mr-3">Gizlilik ve Koşullar</a></div>
-            <div><a
+                class="link mr-3">Yardım Merkezi</a></div>
+            <div class="d-inline-block"><a href="" class="link mr-3">Gizlilik ve Koşullar</a></div>
+            <div class="d-inline-block"><a
                 href="https://www.linkedin.com/help/linkedin/answer/62931?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BT6H7rzDzR%2FSQEvO%2BuBKdSw%3D%3D&licu=urn%3Ali%3Acontrol%3Ad_flagship3_feed-compactfooter.ad_choices"
-                class="link">Reklam Tercihleri</a></div>
-            <div><a
+                class="link mr-3">Reklam Tercihleri</a></div>
+            <div class="d-inline-block"><a
                 href="https://www.linkedin.com/ad/start?trk=n_nav_ads_rr&lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BT6H7rzDzR%2FSQEvO%2BuBKdSw%3D%3D&licu=urn%3Ali%3Acontrol%3Ad_flagship3_feed-compactfooter.advertising"
-                class="link">Reklam</a></div>
+                class="link mr-3">Reklam</a></div>
             <div class="text-center" style="margin-top: 10px">
               <img src="https://www.logo.wine/a/logo/LinkedIn/LinkedIn-Logo.wine.svg" width="90px" height="20px" /><span
                 style="font-size: 12px; margin-left: -15px">Linkedin Corporation © 2021</span>
