--- a/Bootstrap/bootstraplinkedinclone/index.html
+++ b/Bootstrap/bootstraplinkedinclone/index.html
@@ -489,7 +489,7 @@
               Linkedin Learning'de daha fazlasını göster
             </div>
           </div>
-          <div class="text-center mt-3 ml-3" style="">
+          <div class="text-center mt-3 ml-3 sticky">
             <div class="d-inline-block"><a href="https://about.linkedin.com/" class="link mr-3">Hakkında</a></div>
             <div class="d-inline-block"><a
                 href="https://www.linkedin.com/accessibility?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BT6H7rzDzR%2FSQEvO%2BuBKdSw%3D%3D&licu=urn%3Ali%3Acontrol%3Ad_flagship3_feed-compactfooter.accessibility"
