--- a/Bootstrap/bootstraplinkedinclone/index.html
+++ b/Bootstrap/bootstraplinkedinclone/index.html
@@ -515,7 +515,7 @@
   </div>
   <!-- mesajlaşma -->
   <nav class="navbar navbar-expand-xl navbarbg position-sticky fixed-bottom border"
-    style="height: 50px; position: -webkit-sticky; border-radius: 5px; margin-left: auto; right: 15px;">
+    style="height: 50px; width: 300px; position: -webkit-sticky; border-radius: 5px; margin-left: auto; right: 15px;">
     <a class="navbar-brand" href="#"><img
         src="https://media-exp1.licdn.com/dms/image/C4D03AQFpMjVJ_N2wRQ/profile-displayphoto-shrink_100_100/0/1582787654653?e=1616630400&v=beta&t=C1X2NxhcN0R0GmELl1Ew7BeOoyGbwJXCw8c7lHm6XuA"
         style="width: 30px; height: 30px; border-radius: 50%;" /></a>
