--- a/Bootstrap/bootstraplinkedinclone/index.html
+++ b/Bootstrap/bootstraplinkedinclone/index.html
@@ -137,7 +137,7 @@
             <div class="card-body mt-2">
               <div class="card-title">
                 <img
-                  src="https://media-exp1.licdn.com/dms/image/C4E0BAQGl9HYLHdcl6g/company-logo_100_100/0/1610108537301?e=1619654400&v=beta&t=MxTTjGSiH6Xvx2x9YMbjgLWIaU5uojZNqXGGuUIWUQo"
+                  src="https://media-exp1.licdn.com/dms/image/C4E0BAQGl9HYLHdcl6g/company-logo_100_100/0/1610108537301?e=1654732800&v=beta&t=nCF5ZWQMHa2wAkeH2elAe1CuAC36j9e88zfPmNeJj8Q"
                   style="width: 32px; height: 32px" />
                 <div style="
                       font-size: 15px;
@@ -250,16 +250,16 @@
             <div class="card-header">
               <span>
                 <img
-                  src="https://media-exp1.licdn.com/dms/image/C4E03AQEq7HNPXtEvvw/profile-displayphoto-shrink_200_200/0/1596227507685?e=1617235200&v=beta&t=Br4sHpegbSSX-GR1RnrEqRrZxTr55k3R80qTImOV0i0"
+                  src="https://media-exp1.licdn.com/dms/image/C4D0BAQG1AL6eXKd-_Q/company-logo_100_100/0/1613159962451?e=1654732800&v=beta&t=zH5pVSUOrVEMv6V9zp5dcFDeDelFhlLYuHekgVk7zX4"
                   class="postphoto">
                 <span class="posttext"><a href="https://www.linkedin.com/in/malan/" target="_blank"
-                    style="color: #212529;">David J. Malan</a></span>
+                    style="color: #212529;">Patika.dev</a></span>
                 <span class="float-right">
                   <i class="fas fa-ellipsis-h fa-md"></i>
                 </span>
                 <span class=""
                   style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 13px; color: #474747;">I
-                  teach CS50</span>
+                  27.702 takipçi</span>
                 <span class=""
                   style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 13px; color: #474747;">25a
                   <i class="fas fa-globe-americas fa-sm"></i></span>
@@ -267,10 +267,11 @@
             <div>
               <p class="card-text ml-3"
                 style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 15px; color: black;">
-                They have done great things! Tebrikler Kodluyoruz!
+                <a href="">SmartPulse Technology Inc.</a> ve <a href="">Patika.dev</a>
+                işbirliği ile düzenlediğimiz staj programları başlıyor...
               </p>
               <div>
-                <img src="https://pbs.twimg.com/media/Em2_xBbXUAEVDx1.jpg" class="card-img-top mb-1" alt="..." />
+                <img src="https://media-exp1.licdn.com/dms/image/C4D22AQEj_y2ZGwaRWA/feedshare-shrink_800/0/1646673302040?e=1649289600&v=beta&t=0hEAgdt3VsfsszuKj5S1NZejVvfnWoorJh-Gmgiz3V0" class="card-img-top mb-1" alt="..." />
               </div>
               <span class="ml-3"><img src="https://static-exp1.licdn.com/sc/h/d310t2g24pvdy4pt1jkedo4yb" alt=""></span>
               <span class=""><img src="https://static-exp1.licdn.com/sc/h/5thsbmikm6a8uov24ygwd914f" alt=""></span>
@@ -413,9 +414,9 @@
             <div class="card-title">
               <div class="ml-3">
                 <img
-                  src="https://media-exp1.licdn.com/dms/image/C4E0BAQFJFhz89Jkl1w/company-logo_200_200/0/1609603335789?e=1619654400&v=beta&t=m6mVHf05Zfd34UW8SBsvRz939Z_lxYUY3GilK-_MrCw"
+                  src="https://media-exp1.licdn.com/dms/image/C4E0BAQEqeZExqg1uNA/company-logo_200_200/0/1632929341025?e=1654732800&v=beta&t=Ldw9CKvzn8JZ6SZMlQzhvoU0WyhAgR13rcQeTa_p4zU"
                   style="width: 50px; height: 50px; border-radius: 50%" />
-                <span class="header ml-1" style="font-size: 14px">Codecraft</span>
+                <span class="header ml-1" style="font-size: 14px">Yemeksepeti</span>
                 <span class="float-right mr-3 mt-2"><button class="btn btn-outline-primary" style="border-radius: 50px">
                     <strong>+ Takip Et</strong>
                   </button></span>
@@ -424,9 +425,9 @@
             <div class="card-title">
               <div class="ml-3">
                 <img
-                  src="https://media-exp1.licdn.com/dms/image/C4D0BAQF7ydVqrVTvqg/company-logo_200_200/0/1587802313117?e=1619654400&v=beta&t=2kFooBBTUCTVngrEWmktX1z6nI8EgX8nRdQNH8-vxww"
+                  src="https://media-exp1.licdn.com/dms/image/C4E0BAQFnv4gI-bzgIw/company-logo_200_200/0/1640713604210?e=1654732800&v=beta&t=JJj9K70IUgq6XdMZwHP9jvOFvxKbmOti-B921l1-k0o"
                   style="width: 50px; height: 50px; border-radius: 50%" />
-                <span class="header ml-1" style="font-size: 14px">Podfresh</span>
+                <span class="header ml-1" style="font-size: 14px">GeeksforGeeks</span>
                 <span class="float-right mr-3 mt-2"><button class="btn btn-outline-primary" style="border-radius: 50px">
                     <strong>+ Takip Et</strong>
                   </button></span>
@@ -435,9 +436,9 @@
             <div class="card-title">
               <div class="ml-3">
                 <img
-                  src="https://media-exp1.licdn.com/dms/image/C4D0BAQH1zDgdaC7alQ/company-logo_200_200/0/1578773895199?e=1619654400&v=beta&t=ke3I_LL-q5odDNzcfpiAsWTIjnqUk2BCVNQCI88BQqk"
+                  src="https://media-exp1.licdn.com/dms/image/C4E0BAQEooBvMO2kBVg/company-logo_200_200/0/1519880697944?e=1654732800&v=beta&t=qpIrD9kco1DELPkP2Gdjf8IJtcd0EhQ34DMrBOHSidw"
                   style="width: 50px; height: 50px; border-radius: 50%" />
-                <span class="header ml-1" style="font-size: 14px">Navlungo</span>
+                <span class="header ml-1" style="font-size: 14px">Stack Overflow</span>
                 <span class="float-right mr-3 mt-2"><button class="btn btn-outline-primary" style="border-radius: 50px">
                     <strong>+ Takip Et</strong>
                   </button></span>
@@ -517,7 +518,7 @@
   <nav class="navbar navbar-expand-xl navbarbg position-sticky fixed-bottom border"
     style="height: 50px; width: 300px; position: -webkit-sticky; border-radius: 5px; margin-left: auto; right: 15px;">
     <a class="navbar-brand" href="#"><img
-        src="https://media-exp1.licdn.com/dms/image/C4D03AQFpMjVJ_N2wRQ/profile-displayphoto-shrink_100_100/0/1582787654653?e=1616630400&v=beta&t=C1X2NxhcN0R0GmELl1Ew7BeOoyGbwJXCw8c7lHm6XuA"
+        src="https://media-exp1.licdn.com/dms/image/C4E03AQGP6BT5LDeEXg/profile-displayphoto-shrink_100_100/0/1644589418049?e=1651708800&v=beta&t=Yi7VwG2TOvMvpUGASLdf1gx-CgbI-nBZckbd17udsFA"
         style="width: 30px; height: 30px; border-radius: 50%;" /></a>
     <span
       style="font-size: 14px; font-weight: bold; font-family:Arial, Helvetica, sans-serif;"><strong>Mesajlaşma</strong></span>
